--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,15 @@
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
+
 html {
-  color-scheme: light dark;
+  /* color-scheme: light dark;
   font-family: system-ui;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 100%; */
 }
+
+.alert{
+  background-color: yellow;
+}
+
